--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,20 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+<!-- <dependency>
+                    <groupId>org.myproject</groupId>
+                    <artifactId>ProjectName</artifactId>
+                    <version>0.0.1-SNAPSHOT</version>
+                    <scope>system</scope>
+                    <systemPath>${project.basedir}/src/main/resources/jarfile</systemPath>
+                </dependency> -->
+		<dependency>
+			<groupId>com.thealgorithms</groupId>
+			<artifactId>Java</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>C:\Users\paueg001\Documents\algostuff\Java-1.0-SNAPSHOT.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -30,6 +44,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.13.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.5.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
